# PuraVibaSimpleFullStackWebsite

./: .gitignore  docker-compose.yml
.puraviba-init/: autoimport.yaml  error_handler.json  external_sources.json  ports.json  project.json  rules.json  scripts.json
backend/: Dockerfile  pyproject.toml  uvicorn-log.json
backend/app/: bootstrap.py  main.py
frontend/: .npmrc  Dockerfile  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.js
frontend/src/: App.css  App.jsx  main.jsx  theme.js
frontend/src/errors/: ErrorBoundary.jsx  clientErrorReporter.js
