# backend/pyproject.toml
# Purpose: Defines project metadata and dependencies for the FastAPI backend using PEP 621.
# Imports From: None
# Exported To: Docker build process (uv)

[project]
name = "fastapi-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "numpy",
    "requests",
]

[tool.uv]
# This section can be used for uv-specific configurations in the future.
